// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package calc.service.v1;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service Calc {
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  rpc Add(AddRequest) returns (AddResponse) {
    option (google.api.http) = {
      get: "/calc/add"
    };
  };
  rpc Subtract(SubtractRequest) returns (SubtractResponse) {
    option (google.api.http) = {
      get: "/calc/subtract"
    };
  };
  rpc Multiply(MultiplyRequest) returns (MultiplyResponse) {
    option (google.api.http) = {
      get: "/calc/multiply"
    };
  };
  rpc Divide(DivideRequest) returns (DivideResponse) {
    option (google.api.http) = {
      get: "/calc/divide"
    };
  };
}

message AddRequest {
  int64 a = 1 [(gogoproto.moretags) = 'form:"a" validate:"required"'];
  int64 b = 2 [(gogoproto.moretags) = 'form:"b" validate:"required"'];
}

message AddResponse {
  int64 c = 1 [(gogoproto.jsontag) = 'c'];
}

message SubtractRequest {
  int64 a = 1 [(gogoproto.moretags) = 'form:"a" validate:"required"'];
  int64 b = 2 [(gogoproto.moretags) = 'form:"b" validate:"required"'];
}

message SubtractResponse {
  int64 c = 1 [(gogoproto.jsontag) = 'c'];
}

message MultiplyRequest {
  int64 a = 1 [(gogoproto.moretags) = 'form:"a" validate:"required"'];
  int64 b = 2 [(gogoproto.moretags) = 'form:"b" validate:"required"'];
}

message MultiplyResponse {
    int64 c = 1 [(gogoproto.jsontag) = 'c'];
}

message DivideRequest {
  int64 a = 1 [(gogoproto.moretags) = 'form:"a" validate:"required"'];
  int64 b = 2 [(gogoproto.moretags) = 'form:"b" validate:"required"'];
}

message DivideResponse {
  int64 c = 1 [(gogoproto.jsontag) = 'c'];
}

